--- a/Webpages/notifications.html
+++ b/Webpages/notifications.html
@@ -35,7 +35,7 @@
      <div class="container-fluid">
        <div class="row content">
          <div class="col-sm-3 sidenav">
-           <h4>Settings</h4>
+           <h3><a href"settings.html">Settings</a></h3>
            <br>
            <ul class="nav nav-pills nav-stacked">
              <div class="input-group">
@@ -46,10 +46,10 @@
                  </button>
                </span>
              </div>
-             <li class="active"><a href="account.html">Account Settings</a></li>
+             <li><a href="account.html">Account Settings</a></li>
              <li><a href="privacy.html">Privacy Settings</a></li>
              <li><a href="billing.html">Billing Settings</a></li>
-             <li><a href="">Notifications Settings</a></li>
+             <li class="active"><a href="notifications.html">Notifications Settings</a></li>
            </ul><br>
          </div>
          <div class="col-sm-9">
