--- a/Webpages/settings.html
+++ b/Webpages/settings.html
@@ -35,10 +35,10 @@
      <div class="container-fluid">
        <div class="row content">
          <div class="col-sm-3 sidenav">
-           <h4>Settings</h4>
+           <h3><a href"settings.html">Settings</a></h3>
            <br>
            <ul class="nav nav-pills nav-stacked">
-             <div class="input-group">
+             <div cnotifications.htmllass="input-group">
                <input type="text" class="form-control" placeholder="Search Settings..">
                <span class="input-group-btn">
                  <button class="btn btn-default" type="button">
@@ -49,10 +49,11 @@
              <li class="active"><a href="account.html">Account Settings</a></li>
              <li><a href="privacy.html">Privacy Settings</a></li>
              <li><a href="billing.html">Billing Settings</a></li>
-             <li><a href="">Notifications Settings</a></li>
+             <li><a href="notifications.html">Notifications Settings</a></li>
            </ul><br>
          </div>
          <div class="col-sm-9">
+           <h1>Settings</h1>
            <h2>Personal Info</h2>
            <hr>
            <h3>Full Name</h3>
