--- a/Webpages/notifications.html
+++ b/Webpages/notifications.html
@@ -14,7 +14,7 @@
       <nav class="navbar navbar-inverse">
         <div class="container-fluid">
           <div class="navbar-header">
-            <a class="navbar-brand" href="#">Covid Connect</a>
+            <a class="navbar-brand" href="home.html">Covid Connect</a>
           </div>
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
@@ -35,7 +35,7 @@
      <div class="container-fluid">
        <div class="row content">
          <div class="col-sm-3 sidenav">
-           <h3><a href"settings.html">Settings</a></h3>
+           <h3><a href="settings.html">Settings</a></h3>
            <br>
            <ul class="nav nav-pills nav-stacked">
              <div class="input-group">
@@ -53,6 +53,7 @@
            </ul><br>
          </div>
          <div class="col-sm-9">
+           <h1>Notifications Settings</h1>
            <h2>Personal Info</h2>
            <hr>
            <h3>Full Name</h3>
