--- a/Webpages/rating.html
+++ b/Webpages/rating.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">Covid Connect</a>
+          <a class="navbar-brand" href="home.html">Covid Connect</a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
