--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">Covid Connect</a>
+          <a class="navbar-brand" href="index.html">Covid Connect</a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav navbar-right">
@@ -78,6 +78,6 @@
     </div>
     <footer class="container-fluid text-center">
       <p>Covid Connect Footer</p>
-    </footer>    
+    </footer>
   </body>
 </html>
