New pages for settings page

--- a/Webpages/billing.html
+++ b/Webpages/billing.html
@@ -113,7 +113,7 @@
  $(window).trigger('hashchange');
 
 });
-     </script>
+     < script>
      <footer class="container-fluid text-center">
        <p>Covid Connect Footer</p>
      </footer>
