Started Chat Roulette

--- a/Webpages/chatroulette.html
+++ b/Webpages/chatroulette.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link href="../style.css" rel="stylesheet">
   </head>
 
@@ -35,23 +38,88 @@
     <div class="container-fluid text-center">
       <div class="row content">
         <div class="col-sm-2 sidenav">
-          <p><a href="#">Link</a></p>
-          <p><a href="#">Link</a></p>
-          <p><a href="#">Link</a></p>
+          <h2>Online Connections</h2>
+          <p><a href="#">Tegan Jennings</a></p>
+          <p><a href="#">Emanuel Ivan</a></p>
+          <p><a href="#">Luke Kavanagh</a></p>
+          <p><a href="#">Oisin Hogan</a></p>
+          <p><a href="#">Sean Hallahan</a></p>
+          <p><a href="#">Jane Doe</a></p>
+          <p><a href="#">Michael Murphy</a></p>
+          <p><a href="#">Karen O'Brien</a></p>
+          <p><a href="#">James Deegan</a></p>
+          <p><a href="#">Ava Hannagan</a></p>
+          <p><a href="#">Damon Salvatore</a></p>
+          <p><a href="#">Klaus Michaelson</a></p>
+
         </div>
         <div class="col-sm-8 text-left">
-          <h1>Chat Roulette Page</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur</p>
+          <h1 id="chatr">Chatroulette</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           <hr>
           <h3>Test</h3>
           <p>Lorem ipsum...</p>
         </div>
         <div class="col-sm-2 sidenav">
           <div class="well">
-            <p>ADS</p>
+            <p>Connnet with a Gamer!</p>
           </div>
           <div class="well">
-            <p>ADS</p>
+            <p>Connect with someone in Quarintine!</p>
+          </div>
+          <div class="well">
+            <p>Rate your Chat!
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+            </p>
+          </div>
+          <div class="well">
+            <p>View Connections!</p>
           </div>
         </div>
       </div>
