--- a/Webpages/settings.html
+++ b/Webpages/settings.html
@@ -46,7 +46,7 @@
                  </button>
                </span>
              </div>
-             <li class="active"><a href="account.html">Account Settings</a></li>
+             <li><a href="account.html">Account Settings</a></li>
              <li><a href="privacy.html">Privacy Settings</a></li>
              <li><a href="billing.html">Billing Settings</a></li>
              <li><a href="notifications.html">Notifications Settings</a></li>
