--- a/Webpages/Profile.HTML
+++ b/Webpages/Profile.HTML
@@ -39,20 +39,23 @@
     </nav>
     <div class="container-fluid text-center">
       <div class="row content">
-        <div class="col-sm-2 sidenav">
-          <p><a href="#">Link</a></p>
-          <p><a href="#">Link</a></p>
-          <p><a href="#">Link</a></p>
-        </div>
-        <div class="col-sm-6 text-left">
+        <div class="col-sm-4">
           <hr>
-          <h1>Profile Page</h1>
+          <h1>Profile</h1>
+          <img src="../Imgs/PfpPlaceholder.png" width="60%" height="60%"></img>
+          <h4>Name</h4>
+          <h4>Age</h4>
+
+        </div>
+        <div class="col-md-8 mb-5 text-left">
+          <hr>
+          <h1>About You</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <p>Integer ornare augue eget ante faucibus ornare. Vivamus volutpat est ipsum, interdum congue ligula tempor quis. Mauris eget pulvinar nibh. Aenean congue, nunc nec consectetur consequat, lectus elit gravida justo, at dapibus nibh odio fermentum diam. Nunc consectetur scelerisque eros ut viverra. Fusce sodales scelerisque massa dignissim scelerisque. Pellentesque et lectus at diam tincidunt pellentesque sit amet eu odio. Morbi vel nisl quis nulla placerat maximus. Duis ut interdum est.</p>
           <hr>
-          <h3>Test</h3>
-          <p>Lorem ipsum...</p>
+
         </div>
-        <div class="col-sm-2 sidenav">
+        <div class="col-sm-4 ">
           <div class="well">
             <p>ADS</p>
           </div>
@@ -66,8 +69,6 @@
        <div class="rows">
 
        </div>
-
-
     <footer class="container-fluid text-center">
       <p>Covid Connect Footer</p>
     </footer>
