--- a/Webpages/Profile.HTML
+++ b/Webpages/Profile.HTML
@@ -51,7 +51,7 @@
           <hr>
           <h1>About You</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          <p>Integer ornare augue eget ante faucibus ornare. Vivamus volutpat est ipsum, interdum congue ligula tempor quis. Mauris eget pulvinar nibh. Aenean congue, nunc nec consectetur consequat, lectus elit gravida justo, at dapibus nibh odio fermentum diam. Nunc consectetur scelerisque eros ut viverra. Fusce sodales scelerisque massa dignissim scelerisque. Pellentesque et lectus at diam tincidunt pellentesque sit amet eu odio. Morbi vel nisl quis nulla placerat maximus. Duis ut interdum est.</p>
+          <p>Integer ornare augue eget ante faucibus ornare. Vivamus volutpat est ipsum, interdum congue ligula tempor quis. Mauris eget pulvinar nibh. Aenean congue, nunc nec consectetur consequat, lectus elit gravida justo, at dapibus nibh odio fermentum diam. Nunc consectetur scelerisque eros ut viverra. Fusce sodales scelerisque massa dignissim scelerisque. Pellentesque et lectus at diam tincidunt pellentesque sit amet eu odio. Morbi vel nisl quis nulla placerat maximus. Duis ut interdum est qurdsg.</p>
           <hr>
 
         </div>
