--- a/Webpages/Connections.html
+++ b/Webpages/Connections.html
@@ -34,27 +34,63 @@
     </nav>
     <div class="container-fluid text-center">
       <div class="row content">
-        <div class="col-sm-2 sidenav">
-          <p><a href="#">Link</a></p>
-          <p><a href="#">Link</a></p>
-          <p><a href="#">Link</a></p>
+        <div class="row content">
+          <div class="col-sm-12">
+          <h1 style="text-decoration:underline; font-weight:bold;">Connections</h1>
         </div>
-        <div class="col-sm-8 text-left">
-          <h1>Connections Page</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <div class="col-sm-3 text-center">
           <hr>
-          <h3>Test</h3>
-          <p>Lorem ipsum...</p>
+          <img src="../Imgs/PfpPlaceholder.png" width="60%" height="60%"></img>
+          <h4>Name</h4>
+          <button style="">Chat Now!</button>
         </div>
-        <div class="col-sm-2 sidenav">
-          <div class="well">
-            <p>ADS</p>
-          </div>
-          <div class="well">
-            <p>ADS</p>
-          </div>
+        <div class="col-sm-3 text-center">
+          <hr>
+          <img src="../Imgs/PfpPlaceholder.png" width="60%" height="60%"></img>
+          <h4>Name</h4>
+          <button style="">Chat Now!</button>
         </div>
+         <div class="col-sm-3 text-center">
+           <hr>
+           <img src="../Imgs/PfpPlaceholder.png" width="60%" height="60%"></img>
+          <h4>Name</h4>
+           <button style="">Chat Now!</button>
+         </div>
+         <div class="col-sm-3 text-center">
+           <hr>
+           <img src="../Imgs/PfpPlaceholder.png" width="60%" height="60%"></img>
+           <h4>Name</h4>
+           <button style="">Chat Now!</button>
+         </div>
       </div>
+      <div class="row content">
+        <div class="col-sm-12">
+          <div class="col-sm-3 text-center">
+            <hr>
+            <img src="../Imgs/PfpPlaceholder.png" width="60%" height="60%"></img>
+            <h4>Name</h4>
+            <button style="">Chat Now!</button>
+          </div>
+          <div class="col-sm-3 text-center">
+            <hr>
+            <img src="../Imgs/PfpPlaceholder.png" width="60%" height="60%"></img>
+            <h4>Name</h4>
+            <button style="">Chat Now!</button>
+          </div>
+          <div class="col-sm-3 text-center">
+            <hr>
+            <img src="../Imgs/PfpPlaceholder.png" width="60%" height="60%"></img>
+            <h4>Name</h4>
+            <button style="">Chat Now!</button>
+          </div>
+          <div class="col-sm-3 text-center">
+            <hr>
+            <img src="../Imgs/PfpPlaceholder.png" width="60%" height="60%"></img>
+            <h4>Name</h4>
+            <button style="">Chat Now!</button>
+          </div>
+      </div>
+    </div>
     </div>
     <footer class="container-fluid text-center">
       <p>Covid Connect Footer</p>
