--- a/Webpages/chatroulette.html
+++ b/Webpages/chatroulette.html
@@ -55,10 +55,29 @@
         </div>
         <div class="col-sm-8 text-left">
           <h1 id="chatr">Chatroulette</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          <hr>
-          <h3>Test</h3>
-          <p>Lorem ipsum...</p>
+          <div class="container">
+            <img src="../user1.png" alt="Avatar">
+            <p>Hello. How are you today?</p>
+            <span class="time-right">11:00</span>
+          </div>
+
+          <div class="container darker">
+            <img src="../user2.jpg" alt="Avatar" class="right">
+            <p>Hey! I'm fine. Thanks for asking!</p>
+            <span class="time-left">11:01</span>
+          </div>
+
+          <div class="container">
+            <img src="../user1.png" alt="Avatar">
+            <p>Sweet! So, what do you wanna do today?</p>
+            <span class="time-right">11:02</span>
+          </div>
+
+          <div class="container darker">
+            <img src="../user2.jpg" alt="Avatar" class="right">
+            <p>Nah, I dunno. Play soccer.. or learn more coding perhaps?</p>
+            <span class="time-left">11:05</span>
+          </div>
         </div>
         <div class="col-sm-2 sidenav">
           <div class="well">
@@ -68,55 +87,7 @@
             <p>Connect with someone in Quarintine!</p>
           </div>
           <div class="well">
-            <p>Rate your Chat!
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-            </p>
+            <p>Rate your Chat!</p>
           </div>
           <div class="well">
             <p>View Connections!</p>
