--- a/Webpages/supportpage.html
+++ b/Webpages/supportpage.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link href="../style.css" rel="stylesheet">
 
   </head>
@@ -43,9 +44,16 @@
         <div class="col-sm-8 text-center">
           <h1>Support Page</h1>
           <hr>
-          <h2 class="clickable">We're Here to Help!</h2>
-          <h2 class="hidden">"Browse Our Help Topics!!"</h2>
+          <h2 onclick="displayText()"=> We're Here to Help!</h2>
+          <div id="targetDiv"></div>
+          <script type="text/javascript">
+            function displayText(){
+              document.getElementById("targetDiv").innerHTML = "Browse Our Help Topics!";
+            }
+          </script>
+
         </div>
+
         <div class="col-sm-2 sidenav">
           <div class="well">
             <p>ADS</p>
@@ -60,11 +68,7 @@
       <p>Covid Connect Footer</p>
 
     </footer>
-<script>
-  $( "h2" ).click(function() {
-    $( ".hidden" ).slideToggle();
-  });
-</script>
+
 </body>
 
 </html>
