Added Divs to support page to hold the different button clicks, Added Style for each.

--- a/Webpages/supportpage.html
+++ b/Webpages/supportpage.html
@@ -54,6 +54,8 @@
 
         </div>
 
+
+
         <div class="col-sm-2 sidenav">
           <div class="well">
             <p>ADS</p>
@@ -61,6 +63,31 @@
           <div class="well">
             <p>ADS</p>
           </div>
+        </div>
+
+  <div id="wrapper">
+			<div id="two">
+				<div id="midleft">
+          <p>CovidConnect Support Box</p>
+				</div>
+				<div id="midright">
+					<div class="side">
+            <p>Settings</p>
+          </div>
+					<div class="side">
+            <p>Your Account</p>
+          </div>
+					<div class="side">
+            <p>Support Chat</p>
+          </div>
+					<div class="side">
+            <p>Safety</p>
+          </div>
+				</div>
+			</div>
+
+			</div>
+
         </div>
       </div>
     </div>
