--- a/Webpages/Profile.HTML
+++ b/Webpages/Profile.HTML
@@ -39,13 +39,14 @@
     </nav>
     <div class="container-fluid text-center">
       <div class="row content">
-        <div class="col-sm-4">
+        <div class="col-md-4">
           <hr>
+          <div class="well" style="margin-left:10%; width:80%; height:80%; margin-bottom:2%; float:center;">
           <h1>Profile</h1>
           <img src="../Imgs/PfpPlaceholder.png" width="60%" height="60%"></img>
           <h4>Name</h4>
           <h4>Age</h4>
-
+        </div>
         </div>
         <div class="col-md-8 mb-5 text-left">
           <hr>
