--- a/Webpages/billing.html
+++ b/Webpages/billing.html
@@ -58,14 +58,16 @@
            <hr>
            <h3>Full Name</h3>
            <input type="text" class="input" value="Jane Doe">
-           <h3>Birthday</h3>
-           <input type="text" class="input" value="20th April 1999">
-           <h3>Gender</h3>
-           <input type="text" class="input" value="Female">
-           <h3>Email</h3>
-           <input type="text" class="input" value="example@example.ie">
-           <h3>Password</h3>
-           <input type="password" class="input" value="password">
+           <h3>Card Number</h3>
+           <input type="password" class="input" value="958126135823">
+           <h3>Expiry Date</h3>
+           <input type="text" class="input" value="12/23">
+           <h3>Next Payment Date</h3>
+           <input type="text" class="input" value="20th November 2020">
+           <h3>Next Payment Amount</h3>
+           <input type="text" class="input" value="€5">
+           <h3>Cancel Subscription</h3>
+           <input type="text" class="input" value="No">
            <br>
            <button class="btn" style="margin-bottom:20%;">Update</button>
          </div>
