--- a/Webpages/notifications.html
+++ b/Webpages/notifications.html
@@ -54,18 +54,16 @@
          </div>
          <div class="col-sm-9">
            <h1>Notifications Settings</h1>
-           <h2>Personal Info</h2>
+           <h2>Notification Info</h2>
            <hr>
-           <h3>Full Name</h3>
-           <input type="text" class="input" value="Jane Doe">
-           <h3>Birthday</h3>
-           <input type="text" class="input" value="20th April 1999">
-           <h3>Gender</h3>
-           <input type="text" class="input" value="Female">
-           <h3>Email</h3>
-           <input type="text" class="input" value="example@example.ie">
-           <h3>Password</h3>
-           <input type="password" class="input" value="password">
+           <h3>New Connection Notifications</h3>
+           <input type="text" class="input" value="On">
+           <h3>New Message Notifications</h3>
+           <input type="text" class="input" value="On">
+           <h3>Connection Online Notifications</h3>
+           <input type="text" class="input" value="On">
+           <h3>Application Updates Notifications</h3>
+           <input type="text" class="input" value="Off">
            <br>
            <button class="btn" style="margin-bottom:20%;">Update</button>
          </div>
