--- a/Webpages/privacy.html
+++ b/Webpages/privacy.html
@@ -58,14 +58,14 @@
            <hr>
            <h3>Full Name</h3>
            <input type="text" class="input" value="Jane Doe">
-           <h3>Birthday</h3>
-           <input type="text" class="input" value="20th April 1999">
            <h3>Gender</h3>
            <input type="text" class="input" value="Female">
            <h3>Email</h3>
            <input type="text" class="input" value="example@example.ie">
            <h3>Password</h3>
            <input type="password" class="input" value="password">
+           <h3>Change Password</h3>
+           <input type="text" class="input" value="Enter New Password">
            <br>
            <button class="btn" style="margin-bottom:20%;">Update</button>
          </div>
