--- a/index.html
+++ b/index.html
@@ -39,18 +39,18 @@
     			<div class="sign-in-htm">
     				<div class="group">
     					<label for="user" class="label">Username</label>
-    					<input id="user" type="text" class="input">
+    					<input id="username" type="text" class="input">
     				</div>
     				<div class="group">
     					<label for="pass" class="label">Password</label>
-    					<input id="pass" type="password" class="input" data-type="password">
+    					<input id="password" type="password" class="input" data-type="password">
     				</div>
     				<div class="group">
     					<input id="check" type="checkbox" class="check" checked>
     					<label for="check"><span class="icon"></span> Keep me Signed in</label>
     				</div>
     				<div class="group">
-    					<input type="submit" class="button" value="Sign In">
+    					<input type="submit" class="button" value="Sign In" onclick="processDetails()">
     				</div>
     				<div class="hr"></div>
     				<div class="foot-lnk">
