--- a/index.html
+++ b/index.html
@@ -88,5 +88,6 @@
     <footer class="container-fluid text-center">
       <p>Covid Connect Footer</p>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
