--- a/Webpages/home.html
+++ b/Webpages/home.html
@@ -42,6 +42,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 mb-5">
+          <h1 id="usernameDis"></h1>
           <h2>What is Covid Connect?</h2>
           <hr>
           <p>Covid Connnect is on online web application that allows you to contact other people who are in quarintine!</p>
@@ -111,5 +112,6 @@
     <footer class="container-fluid text-center">
       <p>Covid Connect Footer</p>
     </footer>
+    <script src="../script.js"></script>
   </body>
 </html>
