--- a/index.html
+++ b/index.html
@@ -60,22 +60,22 @@
     			<div class="sign-up-htm">
     				<div class="group">
     					<label for="user" class="label">Username</label>
-    					<input id="user" type="text" class="input">
+    					<input id="NewUser" type="text" class="input">
     				</div>
     				<div class="group">
     					<label for="pass" class="label">Password</label>
-    					<input id="pass" type="password" class="input" data-type="password">
+    					<input id="NewPass" type="password" class="input" data-type="password">
     				</div>
     				<div class="group">
     					<label for="pass" class="label">Repeat Password</label>
-    					<input id="pass" type="password" class="input" data-type="password">
+    					<input id="NewpassTwo" type="password" class="input" data-type="password">
     				</div>
     				<div class="group">
     					<label for="pass" class="label">Email Address</label>
-    					<input id="pass" type="text" class="input">
+    					<input id="Email" type="text" class="input">
     				</div>
     				<div class="group">
-    					<input type="submit" class="button" value="Sign Up">
+    					<input type="submit" class="button" value="Sign Up" onclick="createUser()">
     				</div>
     				<div class="hr"></div>
     				<div class="foot-lnk">
