--- a/Webpages/home.html
+++ b/Webpages/home.html
@@ -11,7 +11,7 @@
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   </head>
-  <body>
+  <body onload="displayUser()">
     <!-- Navigation -->
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
