--- a/Webpages/Profile.HTML
+++ b/Webpages/Profile.HTML
@@ -10,7 +10,7 @@
     <link href="../style.css" rel="stylesheet">
   </head>
 
-  <body>
+  <body onload="displayUser()">
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -44,7 +44,7 @@
           <div class="well" style="margin-left:10%; width:80%; height:80%; margin-bottom:2%; float:center;">
           <h1>Profile</h1>
           <img src="../Imgs/PfpPlaceholder.png" width="60%" height="60%"></img>
-          <h4>Name</h4>
+          <h4 id="usernameDis"></h4>
           <h4>Age</h4>
         </div>
         </div>
