--- a/Webpages/home.html
+++ b/Webpages/home.html
@@ -42,7 +42,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 mb-5">
-          <h1 id="usernameDis"></h1>
+          <h1 id="usernameDis">Welcome </h1>
           <h2>What is Covid Connect?</h2>
           <hr>
           <p>Covid Connnect is on online web application that allows you to contact other people who are in quarintine!</p>
