--- a/Webpages/Profile.HTML
+++ b/Webpages/Profile.HTML
@@ -42,9 +42,9 @@
         <div class="col-md-4">
           <hr>
           <div class="well" style="margin-left:10%; width:80%; height:80%; margin-bottom:2%; float:center;">
-          <h1>Profile</h1>
+          <h1 id="usernameDis"> </h1>
           <img src="../Imgs/PfpPlaceholder.png" width="60%" height="60%"></img>
-          <h4 id="usernameDis"></h4>
+          <h4>Name</h4>
           <h4>Age</h4>
         </div>
         </div>
