--- a/Webpages/Profile.HTML
+++ b/Webpages/Profile.HTML
@@ -42,7 +42,7 @@
         <div class="col-md-4">
           <hr>
           <div class="well" style="margin-left:10%; width:80%; height:80%; margin-bottom:2%; float:center;">
-          <h1 id="usernameDis"> </h1>
+          <h1 id="usernameDisProfile"> </h1>
           <img src="../Imgs/PfpPlaceholder.png" width="60%" height="60%"></img>
           <h4>Name</h4>
           <h4>Age</h4>
