--- a/Webpages/settings.html
+++ b/Webpages/settings.html
@@ -117,6 +117,6 @@
      <footer class="container-fluid text-center">
        <p>Covid Connect Footer</p>
      </footer>
-     <script href="../script.js"></script>
+     <script src="../script.js"></script>
    </body>
 </html>
