Settings DB Fixes 02

--- a/Webpages/settings.html
+++ b/Webpages/settings.html
@@ -56,16 +56,16 @@
            <h1>Settings</h1>
            <h2>Personal Info</h2>
            <hr>
-           <h3>Full Name</h3>
-           <input id="fullName" type="text" class="input">
-           <h3>Birthday</h3>
+           <h3 id="fullName">Full Name: </h3>
+           <input type="text" class="input">
+           <h3 id="fullName">Birthday: </h3>
            <input id="dob" type="text" class="input">
-           <h3>Gender</h3>
-           <input id="gender" type="text" class="input">
-           <h3>Email</h3>
-           <input id="email" type="text" class="input">
-           <h3>Password</h3>
-           <input id="password" type="password" class="input">
+           <h3 id="gender">Gender: </h3>
+           <input type="text" class="input">
+           <h3 id="email">Email</h3>
+           <input type="text" class="input">
+           <h3 id="password">Password</h3>
+           <input type="password" class="input">
            <br>
            <button class="btn" style="margin-bottom:20%;">Update</button>
          </div>
