Settings DB Fixes 03

--- a/Webpages/settings.html
+++ b/Webpages/settings.html
@@ -62,9 +62,9 @@
            <input id="dob" type="text" class="input">
            <h3 id="gender">Gender: </h3>
            <input type="text" class="input">
-           <h3 id="email">Email</h3>
+           <h3 id="email">Email: </h3>
            <input type="text" class="input">
-           <h3 id="password">Password</h3>
+           <h3 id="password">Password: </h3>
            <input type="password" class="input">
            <br>
            <button class="btn" style="margin-bottom:20%;">Update</button>
