--- a/Webpages/settings.html
+++ b/Webpages/settings.html
@@ -58,7 +58,7 @@
            <hr>
            <h3 id="fullName">Full Name: </h3>
            <input type="text" class="input">
-           <h3 id="fullName">Birthday: </h3>
+           <h3 id="dob">Birthday: </h3>
            <input id="dob" type="text" class="input">
            <h3 id="gender">Gender: </h3>
            <input type="text" class="input">
