Settings pages html

--- a/Webpages/privacy.html
+++ b/Webpages/privacy.html
@@ -54,15 +54,14 @@
          </div>
          <div class="col-sm-9">
            <h1>Privacy Settings</h1>
-           <h2>Personal Info</h2>
            <hr>
-           <h3>Full Name</h3>
-           <input type="text" class="input" value="Jane Doe">
-           <h3>Gender</h3>
-           <input type="text" class="input" value="Female">
-           <h3>Email</h3>
-           <input type="text" class="input" value="example@example.ie">
-           <h3>Password</h3>
+           <h3>Manage Email Notifications</h3>
+           <input type="text" class="input" value="Unsubscribed">
+           <h3>Manage Privacy settings</h3>
+           <input type="text" class="input" value="">
+           <h3>View Terms of service</h3>
+           <input type="text" class="input" value="">
+           <h3>Protect Account</h3>
            <input type="password" class="input" value="password">
            <h3>Change Password</h3>
            <input type="text" class="input" value="Enter New Password">
