settings side nav

--- a/Webpages/settings.html
+++ b/Webpages/settings.html
@@ -46,6 +46,7 @@
                  </button>
                </span>
              </div>
+             <li><a href="settings.html">Personal Information</a></li>
              <li><a href="account.html">Account Settings</a></li>
              <li><a href="privacy.html">Privacy Settings</a></li>
              <li><a href="billing.html">Billing Settings</a></li>
@@ -56,16 +57,16 @@
            <h1>Settings</h1>
            <h2>Personal Info</h2>
            <hr>
-           <h3 id="fullName">Full Name: </h3>
-           <input type="text" class="input">
-           <h3 id="dob">Birthday: </h3>
-           <input id="dob" type="text" class="input">
-           <h3 id="gender">Gender: </h3>
-           <input type="text" class="input">
-           <h3 id="email">Email: </h3>
-           <input type="text" class="input">
-           <h3 id="password">Password: </h3>
-           <input type="password" class="input">
+           <h3>Full Name</h3>
+           <input type="text" class="input" value="Jane Doe">
+           <h3>Birthday</h3>
+           <input type="text" class="input" value="20th April 1999">
+           <h3>Gender</h3>
+           <input type="text" class="input" value="Female">
+           <h3>Email</h3>
+           <input type="text" class="input" value="example@example.ie">
+           <h3>Password</h3>
+           <input type="password" class="input" value="password">
            <br>
            <button class="btn" style="margin-bottom:20%;">Update</button>
          </div>
