--- a/Webpages/billing.html
+++ b/Webpages/billing.html
@@ -46,6 +46,7 @@
                  </button>
                </span>
              </div>
+             <li><a href="settings.html">Personal Information</a></li>
              <li><a href="account.html">Account Settings</a></li>
              <li><a href="privacy.html">Privacy Settings</a></li>
              <li class="active"><a href="billing.html">Billing Settings</a></li>
