Loads of changes to loads of pages

--- a/Webpages/chatroulette.html
+++ b/Webpages/chatroulette.html
@@ -81,16 +81,16 @@
         </div>
         <div class="col-sm-2 sidenav">
           <div class="well">
-            <p>Connnet with a Gamer!</p>
+            <p><a href ="chatroulette.html">Connnet with a Gamer!</a></p>
           </div>
           <div class="well">
-            <p>Connect with someone in Quarintine!</p>
+            <p><a href ="chatroulette.html">Connect with someone in Quarintine!</a></p>
           </div>
           <div class="well">
-            <p>Rate your Chat!</p>
+            <p><a href="rating.html">Rate your Chat!</a></p>
           </div>
           <div class="well">
-            <p>View Connections!</p>
+            <p><a href="Connections.html">View Connections!</a></p>
           </div>
         </div>
       </div>
