--- a/Webpages/rating.html
+++ b/Webpages/rating.html
@@ -38,8 +38,8 @@
         <div class="col-sm-12 text-center" style="padding:0px;">
           <h1 style="text-decoration:underline; font-weight:bold;">Rate your chat!</h1>
           <p>Please rate your conversation.</p>
-          <button style="">Rate Now!</button>
-          <p>Skip Rating<p>
+          <button>Rate Now!</button>
+          <button>Skip Rating</button>
           <form action="">
             <fieldset>
               <div class="rating">
@@ -51,13 +51,13 @@
               </div>
             </fieldset>
           </form>
-          <div class="well" style="margin-left:1%; width:25%; height:25%; margin-bottom:2%; float:left;">
+          <div class="well" style="margin-left:1%; width:20%; height:20%; margin-bottom:2%; float:left;">
+            <img src="../Imgs/PfpPlaceholder.png" width="80%" height="80%"></img>
             <h3>You</h3>
-            <img src="../Imgs/PfpPlaceholder.png" width="80%" height="80%"></img>
           </div>
-          <div class="well" style="margin-right:1%; width:25%; height:25%; margin-bottom:2%; float:right;">
-            <h3>Other User</h3>
+          <div class="well" style="margin-right:1%; width:20%; height:20%; margin-bottom:2%; float:right;">
             <img src="../Imgs/PfpPlaceholder.png" width="80%" height="80%"></img>
+            <h3>Other User</h3>
           </div>
       </div>
       <footer class="container-fluid text-center">
